Fix poor sizing on home page

--- a/src/utilities/cardUtil.html
+++ b/src/utilities/cardUtil.html
@@ -89,19 +89,16 @@
       "my-4",
     );
     __col.classList.add("col-lg-4", "d-flex");
-    __card.classList.add("card", "h-100");
+    __card.classList.add("card", "container-fluid", "h-100", "mx-auto");
     __cardImg.classList.add(
       "card-img-top",
       "hover-zoom",
       "hover-shadow",
-      "container-fluid",
       "mt-2",
-      "mx-2",
       "p-0",
     );
     __cardImg.style["object-fit"] = "cover";
-    __cardImg.style["width"] = "20rem";
-    __cardImg.style["height"] = "20rem";
+
     __cardBody.classList.add("card-body", "d-flex", "flex-column");
     __btn.classList.add("btn", "btn-success", "cardCheckoutBtn");
     __h3.classList.add("linkTitle");
